<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_application">BirthdayReminder</string>
    <string name="add_entry_application">BirthdayReminder</string>
    <string name="EntryItemDataSourceImpl_application">EntryItemDataSourceImpl</string>
    
    <string name="action_settings">Settings</string>
    <string name="photoDescription">Photo</string>
    <string name="phoneDescription">Call</string>
    <string name="messageDescription">Send Message</string>
    
    <string name="divider">Divider</string>
    
    <!-- Add Entry activity -->
    <string name="firstName_">First name :</string>
    <string name="firstName">First name</string>
    <string name="lastName_">Last name :</string>
    <string name="lastName">Last name</string>
<!--     <string name="birthdayDate_">Birthday date :</string> -->
<!--     <string name="birthdayDate">Birthday date</string> -->
    <string name="phoneNumber_">Phone number :</string>
    <string name="phoneNumber">Phone number</string>
    <string name="email_">E-mail :</string>
    <string name="email">email</string>
    
    <string name="enterDate">Birthday date ?</string>
    <string name="save">Save</string>
    <string name="clean">Clean</string>
    
    <string name="ADD_ENTRY_ACTIVITY_MSG_NAME_EMPTY">"You should give a first name or a last name."</string>
    <string name="ADD_ENTRY_ACTIVITY_MSG_DATE_NOT_SET">"You should give a birthday date."</string>
    <!-- <string name="ADD_ENTRY_ACTIVITY_MSG_DATE_EMPTY">"You should give a birthday date."</string>
    <string name="ADD_ENTRY_ACTIVITY_MSG_DATE_Wrong">"Birthday date is invalid."</string>-->
    
</resources>
