<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- ## firstName -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        android:text="@string/firstName_" />
	<EditText
        android:id="@+id/firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/firstName" />
	
	<!-- ## lastName -->
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        android:text="@string/lastName_" />
	<EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/lastName" />
	
	<!-- ## birthdayDate -->
	<Button
	    android:id="@+id/birthdayDateButton"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="chooseBirthdayDate"
        android:text="@string/enterDate" />
	
	<!-- ## phoneNumber -->
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        android:text="@string/phoneNumber_" />
	<EditText
        android:id="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phoneNumber" />
	
	<!-- ## email -->
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        android:text="@string/email_" />
	<EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
	
	<Button 
	    android:id="@+id/save"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
	<Button
	    android:id="@+id/clean" 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean"/>
	
    <!-- 
	<EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10" 
        android:singleLine="false"
        android:gravity="top"
        android:inputType="textMultiLine">

        <requestFocus />
    </EditText>
    -->
    
</LinearLayout>
